--- a/vgd/src/app/globals.css
+++ b/vgd/src/app/globals.css
@@ -75,8 +75,8 @@ section {
 .main-content {
   position: absolute;
   top: 50%;
-  left: 100%;
-  transform: traslate(-50%, -50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -121,6 +121,7 @@ button {
   border: 2px solid #fff;
   border-radius: 8em;
   background: none;
+  outline: none;
   transform: translateY(30px);
   opacity: 0;
 }
@@ -129,6 +130,7 @@ button {
 
 @media (max-width: 990px) {
   .card {
+    max-width: 990px;
     width: 50%;
     height: 240px;
   }
