--- a/vgd/src/app/globals.css
+++ b/vgd/src/app/globals.css
@@ -50,16 +50,19 @@ section {
   padding: 1rem;
   letter-spacing: 2rem;
   margin-left: 1em;
+  opacity: 0;
 }
 
 .footer {
+  padding-top: 200px;
   height: 50vh;
   align-items: flex-start;
 }
 
 .footer a {
-  font-size: 4vw;
+  font-size: 4em;
   color: white;
+  opacity: 0;
 }
 
 .main {
@@ -75,6 +78,7 @@ section {
   display: flex;
   justify-content: center;
   gap: 2em;
+  z-index: 1;
 }
 
 .card {
@@ -103,6 +107,7 @@ section {
   border-radius: 100%;
   overflow: hidden;
   transform: scale(0);
+  will-change: transform;
 }
 
 .copy {
@@ -115,15 +120,18 @@ section {
 
 .line {
   position: relative;
+  word-wrap: break-word;
   margin: 0.5em 0;
   width: 100%;
-  height: 28px;
+  max-width: 200px;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  overflow: hidden;
 }
 
 .line p {
   position: relative;
-  font-size: 14px;
+  font-size: 24px;
+  text-align: center;
   transform: translateY(30px);
 }
 
@@ -136,8 +144,16 @@ button {
   border-radius: 8em;
   background: none;
   outline: none;
-  transform: translateY(30px);
+  transform: translateY(0px);
   opacity: 0;
+  z-index: 3;
+  pointer-events: auto;
+}
+
+button a {
+  color: #fff;
+  text-decoration: none;
+  z-index: 4;
 }
 
 /* Responsive 📱 */
@@ -155,5 +171,10 @@ button {
 
   .line {
     width: 100%;
+  }
+
+  .footer a {
+    font-size: 2em;
+    text-align: center;
   }
 }
