--- a/vgd/src/app/globals.css
+++ b/vgd/src/app/globals.css
@@ -50,6 +50,7 @@ section {
   padding: 1rem;
   letter-spacing: 2rem;
   margin-left: 1em;
+  margin-bottom: 1em;
   opacity: 0;
 }
 
@@ -67,14 +68,14 @@ section {
 
 .main {
   width: 100vw;
-  height: 150vh;
+  height: 200vh;
   flex-direction: column;
 }
 
 .row {
   position: relative;
   width: 100vw;
-  margin: 1em 0;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   gap: 2em;
@@ -154,6 +155,21 @@ button a {
   color: #fff;
   text-decoration: none;
   z-index: 1;
+  transition: transform 3.3s ease-out;
+}
+
+button a:hover {
+  color: rgb(214, 207, 207);
+}
+
+.button {
+  transition: transform 0.4s ease-in-out;
+}
+.button:hover {
+  color: rgb(214, 207, 207);
+  transform: scale(1.1);
+  box-shadow: 0 5px 15px rgba(63, 63, 63, 0.3);
+  transform: translateY(-5px);
 }
 
 /* Responsive 📱 */
