--- a/vgd/src/app/globals.css
+++ b/vgd/src/app/globals.css
@@ -11,7 +11,12 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Montserrat", sans-serif;
-  background-color: #000;
+  background: rgb(40, 40, 40);
+  background: radial-gradient(
+    circle,
+    rgba(40, 40, 40, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
   color: #fff;
 }
 
