--- a/vgd/src/app/globals.css
+++ b/vgd/src/app/globals.css
@@ -113,6 +113,7 @@ section {
   pointer-events: auto;
   will-change: transform;
   transform: translateZ(0);
+  transform: translate3d(0, 0, 0);
 }
 
 .card img {
@@ -211,6 +212,23 @@ button a:hover {
   transform: scale(1.1);
   box-shadow: 0 5px 15px rgba(63, 63, 63, 0.3);
   transform: translateY(-5px);
+}
+
+.credits {
+  position: absolute;
+  bottom: 0;
+  letter-spacing: 0.3em;
+  font-size: 0.8em;
+  margin: 4em;
+  opacity: 1;
+}
+
+.credits a {
+  bottom: 0;
+  font-size: 2em;
+  opacity: 1;
+  text-decoration: none;
+  padding: 0.3em;
 }
 
 /* Responsive 📱 */
